# shinjirecs

./: README.md
shinjirecs-api/: .gitignore  LICENSE  Makefile  shinjirecs-api.cabal  stack.yaml
shinjirecs-api/app/: Main.hs  Migrate.hs
shinjirecs-api/config/: database.example.yml  models  paths.example.yml  paths.yml  reservation.yml  server.example.yml  sessionTable
shinjirecs-api/db/: development.sqlite3
shinjirecs-api/private/commands/: recpt1.sh
shinjirecs-api/src/: App.hs  Config.hs  Controller.hs  DB.hs  Helper.hs  Job.hs  Lib.hs  Model.hs  Routing.hs  Server.hs  Session.hs
shinjirecs-api/src/Class/: Castable.hs  DateTime.hs  Object.hs  String.hs
shinjirecs-api/src/Config/: Class.hs  DB.hs  Env.hs  Paths.hs  Reservation.hs
shinjirecs-api/src/Controller/: Types.hs
shinjirecs-api/src/Controllers/: Channels.hs  ChannelsController.hs  HomeController.hs  Install.hs  InstallController.hs  Programs.hs  ProgramsController.hs  Reservations.hs  ReservationsController.hs
shinjirecs-api/src/DB/: Class.hs  Config.hs  HDBC.hs  Migration.hs  ORMLinker.hs  Persist.hs  Status.hs  Types.hs
shinjirecs-api/src/Helper/: DateTimeHelper.hs  EnumHelper.hs  ListHelper.hs  MaybeHelper.hs  NumHelper.hs
shinjirecs-api/src/Jobs/: Recording.hs
shinjirecs-api/src/Models/: Channel.hs  Program.hs  Reservation.hs
shinjirecs-api/src/Routing/: Class.hs  Map.hs  Types.hs
shinjirecs-api/src/Session/: Class.hs  DB.hs
shinjirecs-api/src/controllers/: Channels.hs  Install.hs  Programs.hs  Reservations.hs
shinjirecs-api/src/models/: Channel.hs  Reservation.hs
shinjirecs-api/test/: DBSpec.hs  HelperSpec.hs  Spec.hs  Test.hs
shinjirecs-api/test/Controllers/: ChannelsSpec.hs
shinjirecs-api/test/Models/: ReservationSpec.hs
shinjirecs-api/test/Test/: HelperTest.hs  RoutingTest.hs
shinjirecs-api/test/Test/Models/: ReservationTest.hs
shinjirecs-elm-front/: .gitignore  Makefile  elm-package.json  index.html  memo.txt
shinjirecs-elm-front/public/: boot.js  index.html
shinjirecs-elm-front/src/: API.elm  Components.elm  Main.elm  MainCss.elm  MainCssImpl.elm  MainCssInterface.elm  Models.elm  Ports.elm  Records.elm
shinjirecs-elm-front/src/API/: Remote.elm  Types.elm
shinjirecs-elm-front/src/Components/: EpgProgramsC.elm  EpgProgramsModel.elm  EpgProgramsMsg.elm  Partials.elm  SystemC.elm  SystemModel.elm  SystemMsg.elm  Types.elm
shinjirecs-elm-front/src/Models/: Area.elm  Channel.elm  ColumnInfo.elm  EpgProgram.elm  EpgProgramCategory.elm  Program.elm  ProgramCategory.elm  ProgramTitle.elm  Reservation.elm  System.elm  Types.elm
shinjirecs-elm-front/src/Records/: Area.elm  Channel.elm  ColumnInfo.elm  EpgProgram.elm  EpgProgramCategory.elm  ProgramSeries.elm  ProgramTitle.elm  Reservation.elm  System.elm  Types.elm
shinjirecs-elm-front/src/Utils/: Cmd.elm  DateTime.elm  Either.elm  Http.elm  Json.elm  List.elm  Maybe.elm
shinjirecs-front/: .gitignore  Makefile  gulpfile.js  index.html  package.json  systemjs.config.js
shinjirecs-front/assets/scss/: app.scss
shinjirecs-front/config/: config.d.ts  const.js.default
shinjirecs-front/dev/: all.service.ts  app.component.ts  boot.ts  flash.service.ts  network_observer.ts  top.component.ts  tsconfig.json
shinjirecs-front/dev/models/: api.ts  base.ts  remote.api.ts  reservation.ts
shinjirecs-rails-server/: .gitignore
shinjirecs-rails-server/app/controllers/: application_controller.rb  areas_controller.rb  channels_controller.rb  epg_program_categories_controller.rb  epg_programs_controller.rb  epgdump_schedules_controller.rb  program_categories_controller.rb  program_title_dayoffs_controller.rb  program_title_terms_controller.rb  program_titles_controller.rb  programs_controller.rb  reservations_controller.rb  systems_controller.rb
shinjirecs-rails-server/app/models/: application_record.rb  area.rb  attachinfo.rb  audio_type.rb  channel.rb  epg_program.rb  epg_program_category.rb  epg_program_medium_category.rb  epgdump_schedule.rb  program.rb  program_category.rb  program_medium_category.rb  program_series.rb  program_series_dayoff.rb  program_series_term.rb  program_title.rb  program_title_dayoff.rb  program_title_term.rb  reservation.rb  system.rb  video_type.rb
shinjirecs-rails-server/config/: application.rb  cable.yml  database.yml  database.yml.example  environment.rb  routes.rb  secrets.yml
shinjirecs-rails-server/config/commands/: detect_tuners_count.sh  encoding.sh  epgdump.sh  extend_recording_time.sh  recording-for-test-mode.sh  recording.sh  scan_channel.sh  set_record_time.sh
shinjirecs-rails-server/config/environments/: production.rb
shinjirecs-rails-server/config/initializers/: command.rb  object.rb  setup_dirs.rb  string.rb  time.rb  weekdays.rb
shinjirecs-rails-server/db/: schema.rb  seeds.rb
shinjirecs-rails-server/db/migrate/: 20171109110839_create_channels.rb  20171109110938_create_programs.rb  20171109110943_create_reservations.rb  20171109121511_create_program_categories.rb  20171109170533_create_init_tables.rb
shinjirecs-rails-server/test/controllers/: areas_controller_test.rb  channels_controller_test.rb  epg_program_categories_controller_test.rb  epg_programs_controller_test.rb  epgdump_schedules_controller_test.rb  program_categories_controller_test.rb  program_title_dayoffs_controller_test.rb  program_title_terms_controller_test.rb  program_titles_controller_test.rb  programs_controller_test.rb
shinjirecs-rails-server/test/models/: attachinfo_test.rb  epg_program_category_test.rb  epg_program_medium_category_test.rb  epg_program_test.rb  epgdump_schedule_test.rb  program_medium_category_test.rb  program_series_dayoff_test.rb  program_series_term_test.rb  program_series_test.rb  program_title_dayoff_test.rb  program_title_term_test.rb  program_title_test.rb  reservation_test.rb  video_type_test.rb
