name:                shinjirecs-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/https://github.com/shinjiro-itagaki/shinjirecs/shinjirecs-api
license:             GPL-3
license-file:        LICENSE
author:              Shinjiro Itagaki
maintainer:          ishinjiroster@gmail.com
copyright:           GPL-3
category:            web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Config
                     , Config.Class
                     , Config.DB
                     , Config.Env
                     , Config.Paths
                     , Config.Reservation
                     , DB
                     , DB.Config
                     , DB.Class
                     , DB.HDBC
                     , DB.Persist
                     , DB.Status
                     , DB.Types
                     , Model
                     , Models.Channel
                     , Models.Reservation
                     , Models.Program
                     , Controller
                     , Controller.Types                     
                     , Controllers.ChannelsController
                     , Controllers.InstallController
                     , Controllers.ProgramsController
                     , Controllers.ReservationsController
                     , Class.Castable
                     , Class.String
                     , Helper
                     , Job
                     , Jobs.Recording
                     , Routing
                     , Routing.Class
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-sqlite3
                     , HDBC-mysql
                     , HDBC-postgresql
                     , aeson
                     , bytestring
                     , conduit
                     , containers
                     , dates
                     , directory
                     , enumerator
                     , extra
                     , filepath
--                     , scotty
                     , http-types
                     , mtl
                     , mysql-simple
                     , monad-logger
                     , regex-posix
                     , resource-pool
                     , resourcet
                     , persistent >= 2.6
                     , persistent-template
                     , persistent-mysql
                     , persistent-postgresql
                     , persistent-sqlite
                     , postgresql-simple
                     , process
                     , resourcet
                     , scientific
                     , split
                     , system-argv0
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , wai
                     , wai-extra
                     , warp
                     , yaml
  default-language:    Haskell2010

executable shinjirecs-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shinjirecs-api
  default-language:    Haskell2010

executable shinjirecs-api-migrate
  hs-source-dirs:      app
  main-is:             Migrate.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shinjirecs-api
  default-language:    Haskell2010
  
test-suite shinjirecs-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Test.RoutingTest
                     , Test.HelperTest
  build-depends:       base
                     , shinjirecs-api
                     , HUnit
                     , dates
                     -- , aeson
                     -- , directory
                     -- , filepath
                     -- , hspec
                     -- , hspec-expectations
                     -- , monad-logger
                     -- , mtl
                     -- , persistent
                     -- , system-argv0
                     -- , time
                     -- , text
                     -- , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shinjiro-itagaki/shinjirecs.git
